# test_tasks

./: pyproject.toml
task_1/main/: models.py  serializers.py  tasks.py  urls.py  views.py
task_1/main/migrations/: 0001_initial.py
task_1/main/services/: __init__.py  adstracts.py  cart.py  discount.py  order.py  payment.py  shipping.py
task_1/task_1/: settings.py  urls.py
task_3/main/: admin.py  models.py  services.py  tasks.py  urls.py  views.py
task_3/main/migrations/: 0001_initial.py
task_3/task_3/: asgi.py  settings.py  urls.py  wsgi.py
